    
    o Modify 'xEnrichBarplot', 'xEnrichCompare', 'xVisNet', 'xVisInterp', 'xVisInterpAnimate' and 'xVisEvidence' allowing for inclusion of font family
    
    o Populate the primary source KEGG into 'xEnricherGenes', 'xGRviaGeneAnno', 'xDefineNet', 'xSubneterGenes', 'xSubneterSNPs' and 'xSubneterGR'


CHANGES IN VERSION 1.0.10
-----------------------

NEW FEATURES

    o Add a new function 'xVisInterp' for irregular data interpolation and visualisation
    
    o Populate annotations

    o Modify 'xSymbol2GeneID' allowing for converting into gene info
        
    o Define S3 classes ('eTerm')

    o Add a new function 'xDefineNet' for defining built-in network
    
    
CHANGES IN VERSION 1.0.9
-----------------------

NEW FEATURES

    o Add a new function 'xSymbol2GeneID' for converting gene symbols to entrez geneid
    
    o Add a new function 'xDAGpropagate' for propagating annotations
    
    
CHANGES IN VERSION 1.0.8
-----------------------

NEW FEATURES

    o Add a new function 'xCheckParallel' for checking and using parallel computing on Unix-like systems and on Windows
    
    o Enable parallel computing on Windows ('xDAGsim', 'xSocialiser' and 'xGRviaGenomicAnnoAdv')
    
    o Populate annotations
    

CHANGES IN VERSION 1.0.6
-----------------------

NEW FEATURES

    o Fix bugs (such as in 'xGRviaGeneAnno', 'xGRviaGenomicAnno' and 'xGRviaGenomicAnnoAdv')
    
    o Get published in Genome Medicine (see http://dx.doi.org/10.1186/s13073-016-0384-y)
    

CHANGES IN VERSION 1.0.5
-----------------------

NEW FEATURES

    o Change functions ('xEnrichBarplot' and 'xEnrichCompare') caused by the major ggplot2 update (2.2.0)
    
    o Add a new function 'xColormap' for defining color palette (including those used by ggplot2)

    o Add new functions ('xSubneterGR', 'xGR2GeneScores', 'xGR2nGenes' and 'xGRscores') to conduct region-based network analysis
    
    o Populate annotations
    

CHANGES IN VERSION 1.0.4
-----------------------
