@@ -5,6 +5,7 @@ export(eTerm)
 export(xCheckParallel)
 export(xCircos)
 export(xColormap)
+export(xCombineNet)
 export(xConverter)
 export(xDAGanno)
 export(xDAGpropagate)
