@@ -124,7 +124,7 @@ RData files. See <code>xRDataLoader</code> for details</p>
 
 <h3>See Also</h3>
 
-<p><code>xRDataLoader</code>
+<p><code>xCombineNet</code>
 </p>
 
 
