@@ -18,9 +18,9 @@ side-by-side barplots. It returns an object of class &quot;ggplot&quot;.
 
 <pre>
 xEnrichCompare(list_eTerm, displayBy = c("fc", "adjp", "fdr", "zscore",
-"pvalue"), FDR.cutoff = 0.05, bar.label = TRUE, bar.label.size = 3,
+"pvalue"), FDR.cutoff = 0.05, bar.label = TRUE, bar.label.size = 2.5,
 wrap.width = NULL, sharings = NULL, font.family = "sans",
-signature = TRUE)
+facet = TRUE, signature = TRUE)
 </pre>
 
 
@@ -68,6 +68,11 @@ restriction</p>
 <tr valign="top"><td><code>font.family</code></td>
 <td>
 <p>the font family for texts</p>
+</td></tr>
+<tr valign="top"><td><code>facet</code></td>
+<td>
+<p>logical to indicate whether to facet/wrap a 1d of panels
+into 2d. By default, it sets TRUE</p>
 </td></tr>
 <tr valign="top"><td><code>signature</code></td>
 <td>
