@@ -5,9 +5,9 @@
 \title{Function to compare enrichment results using side-by-side barplots}
 \usage{
 xEnrichCompare(list_eTerm, displayBy = c("fc", "adjp", "fdr", "zscore",
-"pvalue"), FDR.cutoff = 0.05, bar.label = TRUE, bar.label.size = 3,
+"pvalue"), FDR.cutoff = 0.05, bar.label = TRUE, bar.label.size = 2.5,
 wrap.width = NULL, sharings = NULL, font.family = "sans",
-signature = TRUE)
+facet = TRUE, signature = TRUE)
 }
 \arguments{
 \item{list_eTerm}{a list of "eTerm" objects}
@@ -35,6 +35,9 @@ terms by any two or all three. By default, it is NULL meaning no such
 restriction}
 
 \item{font.family}{the font family for texts}
+
+\item{facet}{logical to indicate whether to facet/wrap a 1d of panels
+into 2d. By default, it sets TRUE}
 
 \item{signature}{logical to indicate whether the signature is assigned
 to the plot caption. By default, it sets TRUE showing which function is
